# vanir-uw

./: README.md
requirements/: requirements.txt  requirements_lock_3.10.txt  requirements_lock_3.11.txt  requirements_lock_3.12.txt  requirements_lock_3.13.txt
vanir/language_parsers/: BUILD.bazel  language_parsers.py  tree_sitter_base.py
vanir/language_parsers/python/: BUILD.bazel  python_parser.py  python_parser_test.py
