# Copyright 2025 Google LLC
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://developers.google.com/open-source/licenses/bsd

# Bazel build rules for Vanir Python language parser.
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@vanir_deps//:requirements.bzl", "requirement")

package(default_visibility = [
    "//visibility:public",
])

py_library(
    name = "python_parser",
    srcs = ["python_parser.py"],
    deps = [
        "//vanir/language_parsers:abstract_language_parser",
        "//vanir/language_parsers:common",
        "//vanir/language_parsers:tree_sitter_base",
        requirement("tree-sitter"),
        requirement("tree-sitter-python"),
    ],
)

py_test(
    name = "python_parser_test",
    size = "small",
    srcs = ["python_parser_test.py"],
    deps = [
        ":python_parser",
        requirement("absl-py"),
    ],
)
